# sg_hello_pypi

./: .gitignore  README.md  pyproject.toml
sg_hello_pypi/: __init__.py
tests/: test_api.py
