[tool.poetry]
name = "sg-hello-pypi"
version = "0.1.0"
description = "Demo package to publish"
authors = ["Soof Golan <soofgolan@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sg_hello_pypi"}]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
build = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
